--- a/blog.css
+++ b/blog.css
@@ -41,6 +41,16 @@ h6, .h6 {
           box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);
 }
 
+.blog-nav li {
+  position: relative;
+  display: inline-block;
+  padding: 10px;
+  font-weight: 500;	
+}
+.blog-nav li a {
+  color: #fff;
+}
+
 /* Nav links */
 .blog-nav-item {
   position: relative;
